--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>Canvas</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Canvas de Actividades Docentes</title>
   </head>
   <body>
     <div id="root"></div>
